Controls screen linked to main menu

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -261,7 +261,7 @@ TargetPoint=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_Var
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 Pause_Menu_Widget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 PlayerController=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
-Main_Menu_WIdget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+Main_Menu_WIdget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 HealthPickUp_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 SaveGame_BP_C=
 Checkpoint_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
@@ -2082,28 +2082,29 @@ AudioComponent.Concurrency=True
 AudioComponent.Tags=True
 AudioComponent.Activation=True
 AudioComponent.Cooking=True
+MultiLineEditableTextBox.Layout=True
+MultiLineEditableTextBox.Content=True
+MultiLineEditableTextBox.Style=True
+MultiLineEditableTextBox.Accessibility=True
+MultiLineEditableTextBox.Appearance=True
+MultiLineEditableTextBox.Behavior=True
+MultiLineEditableTextBox.Wrapping=True
+MultiLineEditableTextBox.Render Transform=True
+MultiLineEditableTextBox.Performance=True
+MultiLineEditableTextBox.Clipping=True
+MultiLineEditableTextBox.Navigation=True
+MultiLineEditableTextBox.Localization=True
+MultiLineEditableTextBox.Events=True
+controls_C.Tick=True
+controls_C.Replication=True
+controls_C.Actor=True
+controls_C.Input=True
+controls_C.HLOD=True
+controls_C.WorldPartition=True
+controls_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/spin_bp_rev.spin_bp_rev
-OpenAssetsAtExit=/Game/Door_BP.Door_BP
-OpenAssetsAtExit=/Game/door2_BP.door2_BP
-OpenAssetsAtExit=/Game/blade_BP.blade_BP
-OpenAssetsAtExit=/Game/Blueprints/Obstacles/crusher1.crusher1
-OpenAssetsAtExit=/Game/HDR/spinner1.spinner1
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/PauseMenu/Pause_Menu_Widget.Pause_Menu_Widget
-OpenAssetsAtExit=/Game/Obstacle_Blueprint.Obstacle_Blueprint
-OpenAssetsAtExit=/Game/Blueprints/Obstacles/sphere_model1.sphere_model1
-OpenAssetsAtExit=/Game/Blueprints/Obstacles/EnergySphere_Mat.EnergySphere_Mat
-OpenAssetsAtExit=/Game/Emission_Mat.Emission_Mat
-OpenAssetsAtExit=/Game/ob_course_joint_ca_3.ob_course_joint_ca_3:PersistentLevel.ob_course_joint_ca_3
-OpenAssetsAtExit=/Game/spin_bp.spin_bp
-OpenAssetsAtExit=/Game/Emitters/BP_Win.BP_Win
-OpenAssetsAtExit=/Game/Blueprints/WinScreen/WinScreen_Widget.WinScreen_Widget
-OpenAssetsAtExit=/Game/StarterContent/Audio/SE_Sounds/BG_Music_Cue.BG_Music_Cue
-OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
-OpenAssetsAtExit=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2136,11 +2137,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+WorldSettings=
+Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -2217,8 +2218,8 @@ SoundBase="\"Object\" "
 EditorNotifyObject="\"Object\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 ProgressBar="\"Object\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 Health_Bar_Widget_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
@@ -2420,6 +2421,7 @@ SoundNodeAssetReferencer="\"Object\" "
 SoundNode="\"Object\" \"Object.Mixer.InputVolume\" "
 SoundNodeMixer="\"Object\" \"Object.Mixer.InputVolume\" "
 AudioComponent="\"Object\" "
+MultiLineEditableTextBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -3356,9 +3358,10 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 [MRU]
 MRUItem0=/Game/ob_course_joint_ca_3
 MRUItem1=/Game/mainmenumap
-MRUItem2=/Game/ob_course_joint_ca_4
-MRUItem3=/Game/ob_course_joint_ca
-MRUItem4=/Game/ob_course_joint_ca_2
+MRUItem2=/Game/controls
+MRUItem3=/Game/ob_course_joint_ca_4
+MRUItem4=/Game/ob_course_joint_ca
+MRUItem5=/Game/ob_course_joint_ca_2
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -3381,7 +3384,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Audio/SE_Sounds
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Controls
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3635,26 +3638,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/HealthPickUp/HealthPickUp_BP
-MRUItem1=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem2=/Game/StarterContent/Audio/SE_Sounds/BG_Music_Cue
-MRUItem3=/Game/Blueprints/WinScreen/WinScreen_Widget
-MRUItem4=/Game/Emitters/BP_Win
-MRUItem5=/Game/spin_bp
-MRUItem6=/Game/Emission_Mat
-MRUItem7=/Game/Blueprints/Obstacles/EnergySphere_Mat
-MRUItem8=/Game/Blueprints/Obstacles/sphere_model1
-MRUItem9=/Game/Obstacle_Blueprint
-MRUItem10=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem12=/Game/Door_BP
-MRUItem13=/Game/door2_BP
-MRUItem14=/Game/HDR/spinner1
-MRUItem15=/Game/Blueprints/Obstacles/crusher1
-MRUItem16=/Game/Blueprints/Obstacles/crusher
-MRUItem17=/Game/blade_BP
-MRUItem18=/Game/spin_bp_rev
-MRUItem19=/Game/ThirdPerson/Widgets/Timer_Widget
+MRUItem0=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
+MRUItem1=/Game/Blueprints/Controls/Controls_Widget
+MRUItem2=/Game/Blueprints/Mainmenu/MenuGameMode
+MRUItem3=/Game/HealthPickUp/HealthPickUp_BP
+MRUItem4=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem5=/Game/StarterContent/Audio/SE_Sounds/BG_Music_Cue
+MRUItem6=/Game/Blueprints/WinScreen/WinScreen_Widget
+MRUItem7=/Game/Emitters/BP_Win
+MRUItem8=/Game/spin_bp
+MRUItem9=/Game/Emission_Mat
+MRUItem10=/Game/Blueprints/Obstacles/EnergySphere_Mat
+MRUItem11=/Game/Blueprints/Obstacles/sphere_model1
+MRUItem12=/Game/Obstacle_Blueprint
+MRUItem13=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem14=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem15=/Game/Door_BP
+MRUItem16=/Game/door2_BP
+MRUItem17=/Game/HDR/spinner1
+MRUItem18=/Game/Blueprints/Obstacles/crusher1
+MRUItem19=/Game/Blueprints/Obstacles/crusher
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -3738,6 +3741,8 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Emitters/Win_Emitter.Win_Emitter=1
 /Game/Emitters/BP_Win.BP_Win=1
 /Game/Blueprints/WinScreen/WinScreen_Widget.WinScreen_Widget=1
+/Game/controls.controls:PersistentLevel.controls=1
+/Game/Blueprints/Controls/Controls_Widget.Controls_Widget=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
